packages/survey-core/src/default-theme/blocks/sd-table.scss
@use "../variables.scss" as *;
@use "../typography-mixins.scss" as *;

@function table-sticky-background($color_list) {
  $result: "";
  @each $color in $color_list {
    // If it's the first item, don't add the separator
    @if $result == "" {
      $result: "linear-gradient(#{$color}, #{$color})";
    } @else {
      $result: " #{$result}, linear-gradient(#{$color}, #{$color})";
    }
  }
  $result: "#{$result};";
  @return $result;
}
.sd-table-wrapper {
  --sd-table-sticky-background-color: #{table-sticky-background(
      (
        var(--sjs2-color-component-panel-default-bg),
        var(--sjs2-color-utility-surface-survey),
        var(--sjs2-color-utility-body)
      )
    )};
}
.sd-element--with-frame.sd-element--compact {
  .sd-table-wrapper {
    --sd-table-sticky-background-color: #{table-sticky-background(
        (var(--sjs2-color-utility-surface-survey-panelless), var(--sjs2-color-utility-body))
      )};
  }
}

.sd-table {
  width: 100%;
  border-collapse: separate;
  border-spacing: 0;
  white-space: normal;

  & > thead > tr > th {
    border-top: 0;
    border-bottom: var(--sjs2-spacing-x200) solid transparent;
  }
}

.sd-table__cell {
  border-top: var(--sjs2-spacing-x100) solid transparent;
  border-bottom: var(--sjs2-spacing-x100) solid transparent;
  border-left: none;
  border-right: none;
  background-clip: padding-box;
  box-sizing: content-box;
}

.sd-table.sd-table--columnsautowidth {
  .sd-table__cell:not(.sd-table__cell--actions):not(.sd-table__cell--action):not(
      .sd-table__cell--empty.sd-table__cell--error
    ) {
    width: 10000px;
  }
}

.sd-table__row:first-of-type > .sd-table__cell {
  border-top: 0;
}

.sd-table__row:last-of-type > .sd-table__cell {
  border-bottom: 0;
}

.sd-table--align-top {
  .sd-table__cell {
    vertical-align: top;
  }
}

.sd-table--no-header {
  padding-top: var(--sjs2-spacing-x300);
}

.sd-panel:not(.sd-panel--as-page) {
  & > .sd-panel__content {
    // .sd-table--no-header {
    //   padding-top: 0;
    // }

    // .sd-question--table {
    //   .sd-question__content {
    //     padding-bottom: var(--sjs2-spacing-x025);
    //     margin-bottom: var(--sjs2-spacing-negative-x025);
    //     padding-top: var(--sjs2-spacing-x100);
    //     margin-top: var(--sjs2-spacing-negative-x100);
    //   }

    //   & > .sd-question__header {
    //     & ~ .sd-question__content {
    //       padding-top: var(--sjs2-spacing-x200);
    //       --animation-padding-top: #{var(--sjs2-spacing-x200)};

    //       .sd-table--no-header {
    //         padding-top: var(--sjs2-spacing-x400);
    //       }
    //     }
    //   }
    // }

    // .sd-question--table > .sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
    //   margin-top: var(--sjs2-spacing-negative-x300);
    // }

    // .sd-question--table.sd-question--error-top
    //   > .sd-question__content
    //   .sd-table-wrapper
    //   .sd-table:not(.sd-table--no-header) {
    //   margin-top: 0;
    // }

    // &
    //   > .sd-row:not(:first-of-type)
    //   .sd-question--table
    //   > .sd-question__content
    //   .sd-table-wrapper
    //   .sd-table:not(.sd-table--no-header) {
    //   margin-top: var(--sjs2-spacing-negative-x200);
    // }

    // &
    //   > .sd-row:not(:first-of-type)
    //   .sd-question--table.sd-question--error-top
    //   > .sd-question__content
    //   .sd-table-wrapper
    //   .sd-table:not(.sd-table--no-header) {
    //   margin-top: var(--sjs2-spacing-x000);
    // }

    // .sd-question--table
    //   > .sd-question__header
    //   ~ .sd-question__content
    //   .sd-table-wrapper
    //   .sd-table:not(.sd-table--no-header) {
    //   margin-top: var(--sjs2-spacing-x100);
    // }

    // &
    //   > .sd-row:not(:first-of-type)
    //   .sd-question--table
    //   > .sd-question__header
    //   ~ .sd-question__content
    //   .sd-table-wrapper
    //   .sd-table:not(.sd-table--no-header) {
    //   margin-top: var(--sjs2-spacing-x100);
    // }
  }
}

.sd-question:not(.sd-question--mobile) {
  .sd-table--alternate-rows {
    margin-left: var(--sjs2-spacing-x100);
    margin-right: var(--sjs2-spacing-x100);
    width: calc(100% - var(--sjs2-spacing-x200));

    .sd-table__cell:not(.sd-table__cell--header):first-of-type {
      padding-left: var(--sjs2-spacing-x200);
    }

    .sd-table__cell:last-of-type {
      padding-right: var(--sjs2-spacing-x200);
    }

    .sd-table__row:first-of-type > .sd-table__cell {
      border-top: calc(var(--sjs2-base-unit-border-width) * 8) solid transparent;
    }

    .sd-table__row:last-of-type > .sd-table__cell {
      border-bottom: calc(var(--sjs2-base-unit-border-width) * 8) solid transparent;
    }

    .sd-table__row:nth-of-type(odd) {
      --sd-table-sticky-background-color: #{table-sticky-background(
          (#{$background-dark}, var(--sjs2-color-utility-surface-survey-panelless), var(--sjs2-color-utility-body))
        )};

      & > td.sd-table__cell:not(.sd-table__cell--actions),
      td:first-of-type {
        border-top-color: $background-dark;
        border-bottom-color: $background-dark;
        background-color: $background-dark;
        &.sd-matrix__text--checked {
          background-color: var(--sjs2-color-bg-brand-secondary);
        }

        .sd-formbox {
          background-color: $primary-foreground;
        }

        .sd-item:not(.sd-item--error) {
          .sd-item__decorator {
            background-color: var(--sjs2-color-bg-basic-primary);
          }

          &.sd-item--checked .sd-item__decorator {
            background-color: var(--sjs2-color-component-check-true-default-bg);
          }
          &.sd-item--readonly.sd-item--readonly .sd-item__decorator {
            background-color: transparent;
          }
          &.sd-item--preview.sd-item--preview .sd-item__decorator {
            background-color: transparent;
          }
        }
      }
    }
  }
}
/* ... */

